--- a/index.html
+++ b/index.html
@@ -7,34 +7,29 @@
     <title>Frontend Mentor | E-commerce product page</title>
     <meta
       name="description"
-      content="A responsive and light ecommerce app from Frontend Mentor. The site is built using plain HTML and CSS, Vue js, bundled with Vite and hosted on Netlify."
-    />
+      content="A responsive and light ecommerce app from Frontend Mentor. The site is built using plain HTML and CSS, Vue js, bundled with Vite and hosted on Netlify." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ecommerce.raelcode.tech/" />
+    <meta property="og:url" content="https://ecommerce.raelcode.com/" />
     <meta property="og:title" content="Frontend Mentor | ecommerce app" />
     <meta
       property="og:description"
-      content="A responsive and light ecommerce app from Frontend Mentor. The site is built using plain HTML and CSS, Vue js, bundled with Vite and hosted on Netlify."
-    />
+      content="A responsive and light ecommerce app from Frontend Mentor. The site is built using plain HTML and CSS, Vue js, bundled with Vite and hosted on Netlify." />
     <meta
       property="og:image"
-      content="https://ecommerce.raelcode.tech/screenshot_desktop.png"
-    />
+      content="https://ecommerce.raelcode.com/screenshot_desktop.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ecommerce.raelcode.tech/" />
+    <meta property="twitter:url" content="https://ecommerce.raelcode.com/" />
     <meta property="twitter:title" content="Frontend Mentor | ecommerce app" />
     <meta
       property="twitter:description"
-      content="A responsive and light ecommerce app from Frontend Mentor. The site is built using plain HTML and CSS, Vue js, bundled with Vite and hosted on Netlify."
-    />
+      content="A responsive and light ecommerce app from Frontend Mentor. The site is built using plain HTML and CSS, Vue js, bundled with Vite and hosted on Netlify." />
     <meta
       property="twitter:image"
-      content="https://ecommerce.raelcode.tech/screenshot_desktop.png"
-    />
+      content="https://ecommerce.raelcode.com/screenshot_desktop.png" />
   </head>
   <body>
     <div id="app"></div>
